--- a/3.tuple.ipynb
+++ b/3.tuple.ipynb
@@ -168,14 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u\n"
+      "u\n",
+      "w\n"
      ]
     },
     {
@@ -185,7 +186,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;241m700\u001b[39m,\u001b[38;5;241m89\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrat\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(g[\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mg\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(g[\u001b[38;5;241m5\u001b[39m])\n",
+      "Cell \u001b[1;32mIn[10], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(g[\u001b[38;5;241m2\u001b[39m])\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(g[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mg\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m]\u001b[49m)\n",
       "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
      ]
     }
@@ -196,10 +197,9 @@
     "g=1,\"w\",\"u\",\n",
     "'fog',\"sunny\",2.2,7+1j,\n",
     "700,89,\"rat\"\n",
-    "\n",
     "print(g[2])\n",
-    "print(g[-5])\n",
-    "print(g[5])"
+    "print(g[-2])\n",
+    "print(g[-5])     # ERROR\n"
    ]
   },
   {
@@ -446,18 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[39], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Example: 13 / o=((1,(\"hero\",23))) / print: hero ,23, r\u001b[39;00m\n\u001b[0;32m      3\u001b[0m p\u001b[38;5;241m=\u001b[39m((\u001b[38;5;241m1\u001b[39m,(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhero\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m23\u001b[39m)))\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mp\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(p[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(p[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m2\u001b[39m])\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hero\n",
+      "23\n",
+      "r\n"
      ]
     }
    ],
@@ -465,9 +463,9 @@
     "# Example: 13 / o=((1,(\"hero\",23))) / print: hero ,23, r\n",
     "\n",
     "p=((1,(\"hero\",23)))\n",
-    "print(p[0][1][0])\n",
-    "print(p[0][1][1])\n",
-    "print(p[0][1][1][2])\n",
+    "print(p[1][0])\n",
+    "print(p[1][1])\n",
+    "print(p[1][0][2])\n",
     "\n"
    ]
   },
