--- a/3.tuple.ipynb
+++ b/3.tuple.ipynb
@@ -61,11 +61,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -120,6 +115,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u\n",
+      "(7+1j)\n",
+      "2.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: 3\n",
+    "g=(1,\"w\",\"u\",\n",
+    "'fog',\"sunny\",2.2,7+1j,\n",
+    "700,89,\"rat\")\n",
+    "print(g[2])\n",
+    "print(g[6])\n",
+    "print(g[-5])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,7 +165,7 @@
     }
    ],
    "source": [
-    "# Example: 3\n",
+    "# Example: 4\n",
     "\n",
     "g=1,\"w\",\"u\",'fog',\"sunny\",2.2,7+1j\n",
     "print(g[1])\n",
@@ -192,7 +212,7 @@
     }
    ],
    "source": [
-    "# Example: 4\n",
+    "# Example: 5\n",
     "\n",
     "g=1,\"w\",\"u\",\n",
     "'fog',\"sunny\",2.2,7+1j,\n",
@@ -200,6 +220,41 @@
     "print(g[2])\n",
     "print(g[-2])\n",
     "print(g[-5])     # ERROR\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(g[\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mg\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(g[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m]) \n",
+      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: 6\n",
+    "\n",
+    "g=1,2,3,4,\n",
+    "6,6,7,9,2,\n",
+    "2,4,6,7,1\n",
+    "print(g[2])\n",
+    "print(g[7]) # ERROR\n",
+    "print(g[-5]) "
    ]
   },
   {
@@ -229,7 +284,7 @@
    ],
    "source": [
     "\n",
-    "# Example: 5\n",
+    "# Example: 7\n",
     "\n",
     "t=(1,)\n",
     "p=2,\n",
@@ -255,7 +310,7 @@
     }
    ],
    "source": [
-    "# Example: 6\n",
+    "# Example: 8\n",
     "h=1,\"w\",\"u\",'fog',\"sunny\",2.2,7+1j,700,89,\"rat\"\n",
     "print(h[4])\n",
     "print(h[4][3])\n",
@@ -276,7 +331,7 @@
     }
    ],
    "source": [
-    "# Example: 7\n",
+    "# Example: 9\n",
     "\n",
     "d=(1)\n",
     "print(d,type(d))\n",
@@ -297,7 +352,7 @@
     }
    ],
    "source": [
-    "# Example: 8  / t=(1,2,30,\"raja\")/ print: j\n",
+    "# Example: 10  / t=(1,2,30,\"raja\")/ print: j\n",
     "\n",
     "t=(1,2,30,\"raja\")\n",
     "print(t[3][-2])"
@@ -325,7 +380,7 @@
     }
    ],
    "source": [
-    "# Example: 9  / w=(\"raja\",40,\"hero\")/ print: o, a, 40, raja, hero  \n",
+    "# Example: 11  / w=(\"raja\",40,\"hero\")/ print: o, a, 40, raja, hero  \n",
     "\n",
     "w=(\"raja\",40,\"hero\")\n",
     "print(w[2][3])    # her-o-  +ve indexing\n",
@@ -361,7 +416,7 @@
     }
    ],
    "source": [
-    "# Example: 10 / k=(50,-120,\"tiger\",'bigdream',\"coding\") /print: 50, coding, tiger, m, n,c, d, b\n",
+    "# Example: 12 / k=(50,-120,\"tiger\",'bigdream',\"coding\") /print: 50, coding, tiger, m, n,c, d, b\n",
     "\n",
     "k=(50,-120,\"tiger\",'bigdream',\"coding\")\n",
     "print(k[0])\n",
@@ -396,7 +451,7 @@
     }
    ],
    "source": [
-    "# Example: 11 / v=((1,2,3),\"hero\",\"don\") / print: 1, 3, e, o in hero & don, d, h, n. \n",
+    "# Example: 13 / v=((1,2,3),\"hero\",\"don\") / print: 1, 3, e, o in hero & don, d, h, n. \n",
     "\n",
     "v=((1,2,3),\"hero\",\"don\")\n",
     "print(v[0][0])\n",
@@ -431,7 +486,7 @@
     }
    ],
    "source": [
-    "# Example: 12 / y=((\"jack\",\"jon\"),\"donkey\") / print: jack, jon, donkey, d, e, k, a, (\"jack\",\"jon\").\n",
+    "# Example: 14 / y=((\"jack\",\"jon\"),\"donkey\") / print: jack, jon, donkey, d, e, k, a, (\"jack\",\"jon\").\n",
     "  \n",
     "y=((\"jack\",\"jon\"),\"donkey\")\n",
     "print(y[0][0])\n",
@@ -460,7 +515,7 @@
     }
    ],
    "source": [
-    "# Example: 13 / o=((1,(\"hero\",23))) / print: hero ,23, r\n",
+    "# Example: 15 / o=((1,(\"hero\",23))) / print: hero ,23, r\n",
     "\n",
     "p=((1,(\"hero\",23)))\n",
     "print(p[1][0])\n",
@@ -512,14 +567,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "favorite fruit is: apple <class 'tuple'>\n"
+      "('apple', 'cherry', 'orange') <class 'tuple'>\n",
+      "('papaya',) <class 'tuple'>\n"
      ]
     },
     {
@@ -529,7 +585,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m f\u001b[38;5;241m=\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapple\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcherry\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfavorite fruit is:\u001b[39m\u001b[38;5;124m\"\u001b[39m,f[\u001b[38;5;241m0\u001b[39m],\u001b[38;5;28mtype\u001b[39m(f))\n\u001b[1;32m----> 5\u001b[0m \u001b[43mf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpapaya\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfavorite fruit is:\u001b[39m\u001b[38;5;124m\"\u001b[39m,f[\u001b[38;5;241m0\u001b[39m])\n",
+      "Cell \u001b[1;32mIn[19], line 13\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(f ,\u001b[38;5;28mtype\u001b[39m(f))\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# single element in a tuple can not be changed \u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m \u001b[43mf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmango\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m#apple-----> mango\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(f)\n",
       "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -538,9 +594,17 @@
     "# in tuple , character  cannot be changed \n",
     "\n",
     "f=(\"apple\",\"cherry\",\"orange\")\n",
-    "print(\"favorite fruit is:\",f[0],type(f))\n",
-    "f[0]=\"papaya\"\n",
-    "print(\"favorite fruit is:\",f[0])\n",
+    "print(f,type(f))\n",
+    "\n",
+    "# entier tuple can be changed \n",
+    " \n",
+    "f=\"papaya\",\n",
+    "print(f ,type(f))\n",
+    "\n",
+    "# single element in a tuple can not be changed \n",
+    "\n",
+    "f[0]= \"mango\"  #papaya----> mango\n",
+    "print(f)\n",
     "\n",
     "\n",
     "\n",
