list&dict-CRUD   Tuple&set-CR

--- a/7.CRUD optn .ipynb
+++ b/7.CRUD optn .ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# CRUD OPERATIONS\n",
+    "    LIST---------> Create, Read, Update, Delete-->[ , ]\n",
+    "\n",
+    "    Tuple-------->Create,Read-------------------->( , )\n",
+    "\n",
+    "    Set---------->Create, Read------------------->{ , }\n",
+    "\n",
+    "    Dictionary--->Create, Read, Update, Delete--->{key1:value1,....keyn:valuen}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# C-creating a list - 2 ways\n",
     "\n",
     "1. creating an empty list\n",
