--- a/16.if-if-else 111Que.ipynb
+++ b/16.if-if-else 111Que.ipynb
@@ -666,13 +666,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "a=56\n",
-    "if(a<125 and 60<a):\n",
-    "    "
+    "a1=123\n",
+    "if(a1<125 and 60<a1):\n",
+    "    remove_last=a1//10\n",
+    "    remove_1st=remove_last%10\n",
+    "    print(remove_1st)\n"
    ]
   },
   {
@@ -826,11 +836,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aa\n"
+     ]
+    }
+   ],
+   "source": [
+    "c='a'\n",
+    "if('a'<=c<=\"z\"):\n",
+    "    print(c*2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "32. WAP to check whether a character is in the ascii number or not. If the ascii number,\n",
     "to convert into integer.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=\"@\"\n",
+    "a=ord(ch)\n",
+    "if(a<127):\n",
+    "    print(int(a))"
    ]
   },
   {
@@ -2767,6 +2816,525 @@
     "111. WAP to check whether the first item of these two lists is either integer or not. If\n",
     "it is an integer, concatenate these two lists or else print the memory address of\n",
     "these two lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "112. WAP to Cw a given num is +ve, -ve ,or zero with i/p from user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  is a ZERO\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"Enter any nummber to if it a +ve, -ve ,or zero: \"))\n",
+    "if(a>0):\n",
+    "    print(a, \" is a +ve num\")\n",
+    "elif(a<0):\n",
+    "    print(a, \" is a -ve num\")\n",
+    "else:\n",
+    "    print(a, \" is a ZERO\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "113. WAP to cw given character is upper case / lower case / digit/ special symbol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Special symbol\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=input(\"Enter any character: \")\n",
+    "if('A'<=a<='Z'):\n",
+    "    print(a,\"is an upper case \")\n",
+    "elif('a'<=a<='z'):\n",
+    "    print(a,\"is an lower case \")\n",
+    "elif('0'<=a<='9'):\n",
+    "    print(a,\"is an digit/number \")\n",
+    "else:\n",
+    "    print(a, \"Special symbol\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "114. WAP to CW given num is divisible by 3& 5. if num divisible by 3 print \"fizz\" ,if num divisible by 5 print \"bizz\" , if it is divisible by both print \"fizzbizz\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15  fizz\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"Enter any nummber : \"))\n",
+    "if(a%3==0):\n",
+    "    print(a, \" fizz\")\n",
+    "elif(a%5==0):\n",
+    "    print(a, \" bizz\")\n",
+    "elif(a%3 and a%5==0):\n",
+    "    print(a, \" fizzbizz\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "115. WAp to find out the relationship b/w two values & display the relationship"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "116. WAP to CW if given num is 1 digit / 2 digit / 3 digit /more than 3 digits\n",
+    "\n",
+    "if 1-digit -display one digit value \n",
+    "\n",
+    "if 2-digit -display two digit value \n",
+    "\n",
+    "if 3-digit -display three digit value\n",
+    "\n",
+    "if n-digit -display n digit value  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8907 - more than three digit value \n"
+     ]
+    }
+   ],
+   "source": [
+    "a=input(\"Enter any nummber : \")\n",
+    "if(len(a)==1):\n",
+    "    print(a,\"-one digit value \")\n",
+    "elif(len(a)==2):\n",
+    "    print(a,\"- two digit value \")\n",
+    "elif(len(a)==3):\n",
+    "    print(a, \"- three digit value \")\n",
+    "else:\n",
+    "    print(a, \"- more than three digit value \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "117. wap to cw given character is an alphabet or ascii number or special charater or invalid . \n",
+    "\n",
+    "if alphabet , display alphabet with charater\n",
+    "\n",
+    "or elif ascii number then display ascii number with charater \n",
+    "\n",
+    "or else display the special character with charater"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ASCII NUMBER {\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=\"123\"\n",
+    "if('A'<=s<='Z' or 'a'<=s<='z'):\n",
+    "    print(\"Alphabet\",s)\n",
+    "elif(0<=(int(s))<=127):\n",
+    "    print(\"ASCII NUMBER\", chr(int(s)))\n",
+    "else:\n",
+    "    print(\"special charater\",s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "118.WAP to accept number between 1-5 & display that number in word form "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "five\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=input(\"Enter any num from 1-5 to convert into words : \")\n",
+    "if(s==1):\n",
+    "    print(\"one\")\n",
+    "elif(s==2):\n",
+    "    print(\"two\")\n",
+    "elif(s==3):\n",
+    "    print(\"three\")\n",
+    "elif(s==4):\n",
+    "    print(\"four\")\n",
+    "else:\n",
+    "    print(\"five\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "119. WAP to cw the given i/p is upper case /lower case/number/special symbol & display with a message:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67 is an digit/number \n"
+     ]
+    }
+   ],
+   "source": [
+    "a=input(\"Enter any character: \")\n",
+    "if('A'<=a<='Z'):\n",
+    "    print(a,\"is an upper case \")\n",
+    "elif('a'<=a<='z'):\n",
+    "    print(a,\"is an lower case \")\n",
+    "elif('0'<=a<='9'):\n",
+    "    print(a,\"is an digit/number \")\n",
+    "else:\n",
+    "    print(a, \"Special symbol\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "120. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "121. wap to cw given charater is an lower case /upper case /numeric /special charater & display the type of case is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "special character <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='#'\n",
+    "if('A'<=s<='Z'):\n",
+    "    print(a,\"Upper case\",type(a))\n",
+    "elif('a'<=s<='z'):\n",
+    "    print(a,\"Lower case\",type(a))\n",
+    "elif('0'<=a<='9'):\n",
+    "    print(a,\"numeric\",type(a))\n",
+    "else:\n",
+    "    print(\"special character\",type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "122.WAP to cw the given percentage is which grade & display the grade \n",
+    "\n",
+    "NOTE: 1st grade/2nd grade/ 3rd grade / FAIL\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78 2nd grade\n"
+     ]
+    }
+   ],
+   "source": [
+    "g=int(input(\"Enter a grade/Percentage :\"))\n",
+    "if(g>=95):\n",
+    "    print(g,\"1st grade\")\n",
+    "elif(75<=g<=94):\n",
+    "    print(g,\"2nd grade\")\n",
+    "elif(60<=g<=74):\n",
+    "    print(g,\"3rd grade\")\n",
+    "else:\n",
+    "    print(\"FAILD\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "123. WAP to perform the arthmetic operations depend on the users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Power:  4 ** 3 = 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"Enter 1st num:\"))   \n",
+    "b=int(input(\"Enter 2nd num:\"))  \n",
+    "c=input(\"enter the operation to be perform + - //  / % * **:\")\n",
+    "if(c=='+'):\n",
+    "    print(\"Addition : \",a,\"+\",b,\"=\",a+b)\n",
+    "elif(c=='-'):\n",
+    "    print(\"subtraction : \",a,\"-\",b,\"=\",a-b)\n",
+    "elif(c=='//'):\n",
+    "    print(\"Floor division : \",a,\"//\",b,\"=\",a//b)\n",
+    "elif(c=='/'):\n",
+    "    print(\"division : \",a,\"/\",b,\"=\",a/b)\n",
+    "elif(c=='%'):\n",
+    "    print(\"Modulus : \",a,\"%\",b,\"=\",a%b)\n",
+    "elif(c=='*'):\n",
+    "    print(\"Multiplcationn : \",a,\"*\",b,\"=\",a*b)\n",
+    "else:\n",
+    "    print(\"Power: \",a,\"**\",b,\"=\",a**b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "124&116 are same"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "125. WAP to Cw a given collection is a list/ tuple/ string/set\n",
+    "\n",
+    "if-list- append the new value in the middle of the list\n",
+    "\n",
+    "if-tuple-append new value at the starting of the tuple\n",
+    "\n",
+    "if-set-append new value in set\n",
+    "\n",
+    "else-a new key as given character  and value -its ASCII value with character"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('h', 1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=(1,2)  # input(\"enter the collection of elemnts (,,) [,,,] {,,} {:}  : \")\n",
+    "nv='h'   # input(\"Enter any charater need to be added :\")\n",
+    "if(type(a)==list):\n",
+    "    m_i=len(a)//2\n",
+    "    a=a[:m_i:]+[nv]+a[m_i::]\n",
+    "    print(a)\n",
+    "elif(type(a)==tuple):\n",
+    "    a=(nv,)+ a[0::1]\n",
+    "    print(a)\n",
+    "elif(type(a)==set):\n",
+    "    print({nv} | a)\n",
+    "else:\n",
+    "    a=({nv:ord(nv)}|a[0::])\n",
+    "    print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "126. WAP to CW a given value is  int/ float/string/ other,\n",
+    "\n",
+    "if int - given value division by 5 & display the quotient\n",
+    "\n",
+    "if float - perform the bitwise operation or operation with 15\n",
+    "\n",
+    "if string - extract last position value & store it in first position of string\n",
+    "\n",
+    "else store the value in list & display result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list[[1, 2, 3], 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= [1,2,3],(12)\n",
+    "if(type(a)==int):\n",
+    "    print(a//5)\n",
+    "elif(type(a)==float):\n",
+    "    print(int(a)|15)\n",
+    "elif(type(a)==str):\n",
+    "    a=a[-1]+a[0:-1:]\n",
+    "    print(a)\n",
+    "else:\n",
+    "    a=list[a]\n",
+    "    print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "127. WAP to CW the given chracter is upper case or ascii value \n",
+    "\n",
+    "if- upper case - convert to lower case & concatenate next charater of given character\n",
+    "\n",
+    "or\n",
+    "\n",
+    "if -ascii value-convert ascii value & subtract that ascii value by 6 then finally convert value into the ascii character & display the value\n",
+    "\n",
+    "else- display Invalid input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='124'\n",
+    "if('A'<=a<='Z'):\n",
+    "    l=a.lower()\n",
+    "    n=ord(l)+1\n",
+    "    add=l+chr(n)\n",
+    "    print(add)\n",
+    "elif('0'<=a<='127'):\n",
+    "    d=chr(int(a)-6)\n",
+    "    print(d)\n",
+    "else:\n",
+    "    print(\"INVAID INPUT\")\n",
+    "   \n"
    ]
   }
  ],
